# mcp_servers

./: LICENCE  pyproject.toml
src/excel/: mcp_test.xlsx  server.py
