[project]
name = "excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "uvicorn>=0.34.0",
]
[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
excel = "excel:main"
